--- a/fellow-submissions/Paul-Sobers/index.html
+++ b/fellow-submissions/Paul-Sobers/index.html
@@ -12,8 +12,8 @@
   <div class ="container">
     <header>
       <nav>
-        <div><i class="fab fa-angellist"></i></div>
-        <h1>Original Trombones</h1>
+        <div><i class="fab fa-angellist"></i>
+        <h1>Original Trombones</h1></div>
         <ul>
           <li><a href="#features">Features</a></li>
           <li><a href="#how">How It Works</a></li>
