--- a/fellow-submissions/mark-griffith/index.html
+++ b/fellow-submissions/mark-griffith/index.html
@@ -12,8 +12,8 @@
         <header>
             <div class ="top">
                 <div class="logo">
-                <img id="header-img" src="https://www.freelogodesign.org/Content/img/logo-ex-7.png" alt="original trombones logo">
-            </div>
+                    <img class="header-img" src="https://www.freelogodesign.org/Content/img/logo-ex-7.png" alt="original trombones logo">
+                </div>
                 <nav class="nav-bar">
                     <ul>
                     <li><a class="nav-link" href="#jumbo">Features</a></li>
@@ -32,29 +32,39 @@
             </form>
         </section>
         <section id="quality"class="quality">
-            <figure>
-                <img class="img"src="https://image.flaticon.com/icons/png/512/34/34470.png">
-            </figure>
             <article class="content">
-                <h2>Premium Materials</h2> 
-                <p>Our trombones use the shiniest brass which is sourced locally. 
-                This will increase the longevity of your purchase.</p>
+                <figure>
+                    <img class="img"src="https://image.flaticon.com/icons/png/512/34/34470.png">
+                </figure>
+                <div class="desc">
+                    <h2>Premium Materials</h2> 
+                    <p>Our trombones use the shiniest brass which is sourced locally. 
+                    This will increase the longevity of your purchase.</p>
+                </div>
             </article>
-            <figure> 
-                <img class="img"src="https://image.flaticon.com/icons/png/512/34/34470.png">
-            </figure>
             <article class="content">
-            <h2>Fast Shipping</h2>
-            <p>We make sure you recieve your trombone as soon as we have finished making it. 
-            We also provide free returns if you are not satisfied.</p>
+                <figure>
+                    <img class="img"src="https://image.flaticon.com/icons/png/512/34/34470.png">
+                </figure>
+                <div class="desc">
+                    <h2>Fast Shipping</h2>
+                    <p>We make sure you recieve your trombone as soon as we have finished making it. 
+                    We also provide free returns if you are not satisfied.</p>
+                </div>
             </article>
-            <figure>
-                <img class="img"src="https://image.flaticon.com/icons/png/512/34/34470.png">
-            </figure>
             <article class="content">
-            <h2>Quality Assurance</h2>
-            <p>For every purchase you make, 
-            we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+                <figure>
+                    <img class="img"src="https://image.flaticon.com/icons/png/512/34/34470.png">
+                </figure>
+                <div class="desc">
+                    <h2>Quality Assurance</h2>
+                    <p>For every purchase you make, 
+                    we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+                </div>
+            </article>
+            <article class="vid">
+                <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe>
             </article>
         </section>
         <section id="cards" class="cards">
