--- a/fellow-submissions/mark-griffith/index.html
+++ b/fellow-submissions/mark-griffith/index.html
@@ -63,7 +63,7 @@
                 </div>
             </article>
             <article class="vid">
-                <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <iframe width="500px" height="300px"src="https://www.youtube.com/embed/tgbNymZ7vqY">
                 </iframe>
             </article>
         </section>
