--- a/fellow-submissions/Paul-Sobers/index.html
+++ b/fellow-submissions/Paul-Sobers/index.html
@@ -26,7 +26,7 @@
      <h2>Handcrafted, home-made masterpieces</h2>
      <fieldset>
        <input type="email" name="email-address" id ="name"placeholder="Enter your email address"/>
-       <button type="button">Get Started</button>
+       <button type="button" class="started">GET STARTED</button>
     </fieldset>
    </section>
     
@@ -60,7 +60,7 @@
             <li>Lorem ipsum dolor sit amet</li>
             <li>Lorem ipsum dolor sit amet</li>
           </ol>
-          <button type="button">Select</button>
+          <button type="button">SELECT</button>
         </div>
         <div class="second">
          <div class="child">Tenor Trombone</div>
@@ -70,7 +70,7 @@
             <li>Lorem ipsum dolor sit amet</li>
             <li>Lorem ipsum dolor sit amet</li>
           </ol>
-          <button type="button">Select</button>
+          <button type="button">SELECT</button>
         </div>
         <div class="third">
           <div class="child">Tenor Trombone</div>
@@ -80,7 +80,7 @@
             <li>Lorem ipsum dolor sit amet</li>
             <li>Lorem ipsum dolor sit amet</li>
           </ol>
-          <button type="button">Select</button>
+          <button type="button">SELECT</button>
         </div>
       </section>
       
