mobile almost done

--- a/fellow-submissions/devonte-duncan/index.html
+++ b/fellow-submissions/devonte-duncan/index.html
@@ -28,9 +28,42 @@
       </section>
       
       <section>
-          <figure></figure>
+        <div class="statements">
+          <h3>Premium Stock</h3>
+          <p>We get our flies from only the best dung farms in the state. Thick juicy wings and freshly seasoned meaty rumps.</p>
+        </div>
+        <div class="statements">
+          <h3>Super Fast Shipping</h3>
+          <p>We make sure you recieve your flies as soon as we have finished catching them. We also provide free returns if you are not satisfied. Just throw them back up!</p>
+        </div>
+        <div class="statements">
+          <h3>Quality Assurance</h3>
+          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the thickness of your flies.</p>
+        </div>
       </section>
-      <section></section>
+      
+      <section>
+          <figure>
+            <iframe width="967" height="544" src="https://www.youtube.com/embed/u4-NvGBkOqM" frameborder="50px" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </figure>
+      </section>
+      <section>
+        <article>
+          <div class ="article-title"> <h5>Thirty Flies A Month</h5></div>
+             <h4>$600</h4>
+             <p>Lorem ipsum.
+                Lorem ipsum.
+                Lorem ipsum dolor.
+                Lorem ipsum.</p>
+             <button>Select</button>
+        </article>
+        <article>
+          <div class ="article-title"></div>
+        </article>
+        <article>
+          <div class ="article-title"></div>
+        </article>
+      </section>
       <footer></footer>
   </main>
 
