All versions complete

--- a/fellow-submissions/devonte-duncan/index.html
+++ b/fellow-submissions/devonte-duncan/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <img src="frog.png" alt="image of a frog">
     <h1 class="web-title">Flies For Frogs</h1>
     <ul>
       <li><a href="#">Features</a></li>
@@ -29,7 +30,7 @@
         </button>
       </section>
       
-      <section>
+      <section class="statment-section">
         <div class="statements">
           <i class="material-icons">fastfood</i>
           <div class="statments-txt">
