--- a/fellow-submissions/laisha-calalpa/index.html
+++ b/fellow-submissions/laisha-calalpa/index.html
@@ -22,18 +22,18 @@
   </header>
   
     <fieldset>
-      <legend>Handcrafted, home-made masterpieces</legend>
+      <legend><b>Handcrafted, home-made masterpieces</b></legend>
       <label for="email"></label>
         <input type="text" id="email" name="email-address" placeholder="name@domian.com"/>
       <button name="submit"><strong>Get Started</strong></button>
     </fieldset>
       
     <section>
-      <h2>Premium Materials</h2>
+      <h3>Premium Materials</h3>
         <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
-      <h2>Fast Shipping</h2>
+      <h3>Fast Shipping</h3>
         <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
-      <h2>Pricing</h2>
+      <h3>Pricing</h3>
     </section> 
     
     <footer>
